# McDst

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.auto.in  McArrays.cxx  McArrays.h  McDst.cxx  McDst.h  McDstCut.cxx  McDstCut.h  McDstLinkDef.h  McDstQA.cxx  McDstQA.h  McDstReader.cxx  McDstReader.h  McEvent.cxx  McEvent.h  McPIDConverter.cxx  McPIDConverter.h  McParticle.cxx  McParticle.h  McRun.cxx  McRun.h  README.md  configure.ac  hijing2mc.cpp  mcdst_environment.sh  oscar2013ext.cpp  pythia8gen-simple-hbt.cfg  pythia8gen-simple.cfg  pythia8gen.cpp  urqmd2mc.cpp
converters/: hijing2mc.cpp
include/: McArrays.h  McDst.h  McDstLinkDef.h  McDstReader.h  McEvent.h  McPIDConverter.h  McParticle.h  McRun.h  McUtils.h
macros/: Makefile  analyseMcDst.C  analyseWithBranches.C  mcdstqa.C  processMcDstStandalone.cpp  runProcessing.C  spectraFromMcDst.cpp
src/: McDstReader.cxx  McEvent.cxx  McPIDConverter.cxx  McParticle.cxx  McUtils.cxx
